--- a/default.css
+++ b/default.css
@@ -1,4 +1,39 @@
 body {
     background-color: gray;
     color: white;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
+}
+
+div.control {
+    position: relative;
+    max-width: 800px;
+}
+
+div.collatz {
+    max-height: 200px;
+    max-width: 800px;
+    overflow: scroll;
+}
+
+div.lengths {
+    max-height: 300px;
+    max-width: 800px;
+    overflow: scroll;
+}
+
+#title {
+    left: 8px;
+    margin-left: 8px;
+    margin-top: 8px;
+    position: absolute;
+}
+
+#pause {
+    margin-right: 8px;
+    margin-top: 8px;
+    position: absolute;
+    right: 8px;
+    width: 6em;
 }
